# datex

./: .gitignore  config.json  pyproject.toml
src/datex/: extraction.py  main.py
src/datex/conversion/: __init__.py  image_per_page.py  pipeline.py  schemas.py  strategies.py
src/datex/extraction/: __init__.py  pipeline.py  schemas.py  strategies.py
src/datex/models/: schemas.py
src/datex/streamlit_app/: Getting_started.py
src/datex/streamlit_app/pages/: 1_Config.py  1_Datasets.py  3_Run Extraction.py
